[package]
name = "jam-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
serde_derive = "1.0.127"
custom_derive = "0.1.2"
enum_derive = "0.1.7"
